--- a/css/main.css
+++ b/css/main.css
@@ -1,43 +1,61 @@
-#main {
-  color: #344ca4;
-  background-color: #f4f3f3;
-  width: 100%;
-  height: 100%;
-  padding: 2vw;
-  box-sizing: border-box;
-}
-/* nav */
-.nav {
+#header {
   display: flex;
   width: 100%;
   align-items: center;
   justify-content: space-between;
+  padding: 3vw 4vw;
 }
-.nav div:first-child {
+#header .column1 {
   font-size: 2vw;
   font-weight: 600;
 }
-
-.hambuger {
-  height: 22px;
+#header .column2 {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
 }
-.hambuger div {
-  width: 40px;
-  height: 2px;
+#header ul button {
+  border: 1px solid #344ca4;
+  color: #344ca4;
+  background: none;
+  margin-right: 10px;
+  padding: 7px 15px;
+  font-family: GmarketSans;
+  border-radius: 18px;
+}
+#header ul button:hover {
+  color: white;
   background-color: #344ca4;
 }
+#header ul:last-child button {
+  margin-right: 25px;
+  color: white;
+  background-color: #344ca4;
+}
+#header ul:last-child button:hover {
+  border: 1px solid #344ca4;
+  color: #344ca4;
+  background: none;
+}
 
-/* main_section */
+#main {
+  color: #344ca4;
+  background-color: #f8f8f8;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+/* section1 */
+
+/* main_section1 */
 #main .section1 {
-  margin-top: 100px;
-  margin-bottom: 110px;
   display: flex;
   flex-direction: column;
   font-size: 4vw;
-  line-height: 140%;
+  line-height: 160%;
+  padding-top: 3vw;
+  padding-bottom: 6vw;
+  padding-left: 4vw;
 }
 
 #main .section1 em {
@@ -49,11 +67,4 @@
   background-color: #eb5d62;
   color: white;
   font-weight: 200;
-}
-
-#main .section2 {
-  background-color: #eb5d62;
-  width: 100%;
-  display: flex;
-  justify-content: center;
 }
