--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -4,7 +4,7 @@
 #aboutme .section2 {
   background-color: #eb5d62;
   width: 100%;
-  height: 130px;
+  height: 3em;
   color: white;
   font-size: 2.8vw;
   display: flex;
@@ -27,7 +27,6 @@
   padding-bottom: 12vw;
   padding-left: 4vw;
   position: relative;
-  z-index: 5;
 }
 
 #aboutme .section3 p {
@@ -106,6 +105,8 @@
   color: white;
   font-weight: 300;
   height: 31vw;
+  transition: all 1s ease-in-out;
+  z-index: 2;
 }
 #aboutme .section4 .content_box.first.red {
   height: 62vw;
@@ -116,8 +117,9 @@
 #aboutme .section4 .content_box.first p {
   font-size: 1.5em;
   position: absolute;
-  top: 17%;
+  top: 20%;
   left: 13%;
+  transition-delay: 5s;
 }
 #aboutme .section4 .passion {
   position: absolute;
@@ -131,16 +133,10 @@
 #aboutme .section4 .content_box.second {
   perspective: 1000px;
   border-radius: 8%;
+  position: absolute;
   margin-left: 31vw;
 }
-#aboutme .section4 .challenge {
-  position: absolute;
-  top: 12%;
-  right: 3%;
-  color: #0e2a93;
-  font-size: 3vw;
-  font-weight: 300;
-}
+
 .content_box.second .front,
 .content_box.second .back {
   position: absolute;
@@ -177,13 +173,29 @@
   border-radius: 80% 0 0 80%;
   background-color: #fdf78f;
   cursor: pointer;
-  animation: transition 0.6s ease-in-out;
-  left: auto;
-  top: 0%;
   position: absolute;
-  width: 62vw;
+  width: 31vw;
   height: 31vw;
-  transform: translateX(31vw);
+  margin-left: 62vw;
+  z-index: 2;
+  transition: all 1s ease-in-out;
+}
+#aboutme .section4 .challenge {
+  position: absolute;
+  top: 12%;
+  right: 3%;
+  color: #0e2a93;
+  font-size: 3vw;
+  font-weight: 300;
+  z-index: 2;
+}
+#aboutme .section4 .content_box.third.yellow {
+  width: 62vw;
+  margin-left: 31vw;
+  height: 31vw;
+  position: absolute;
+  border-radius: 60em 0 0 60em;
+  transition: all 0.5s ease-in-out;
 }
 #aboutme .section4 .content_box.third p {
   text-align: end;
@@ -198,16 +210,27 @@
   background: url(../image/IMG_6416.JPG) center center;
   background-size: cover;
   position: absolute;
+  transition: all 1s ease-in-out;
+}
+#aboutme .section4 .content_box.fourth:hover {
+  border-radius: 60% 0 60% 0;
+  transition: all 0.5s ease-in-out;
 }
 #aboutme .section4 .content_box.fifth {
   background-color: #0e2a93;
-  border-radius: 0 20% 20% 0;
+  border-radius: 0 80% 80% 0;
   cursor: pointer;
   margin-left: 31vw;
-  width: 62vw;
+  width: 31vw;
   height: 31vw;
   position: absolute;
   z-index: 2;
+  transition: all 1s ease-in-out;
+}
+#aboutme .section4 .content_box.fifth.blue {
+  width: 62vw;
+  border-radius: 0 60em 60em 0;
+  transition: all 0.5s ease-in-out;
 }
 #aboutme .section4 .content_box.fifth p {
   font-size: 1.5em;
@@ -231,7 +254,13 @@
   background-size: cover;
   position: absolute;
   margin-left: 62vw;
+  transition: all 1s ease-in-out;
 }
+#aboutme .section4 .content_box.sixth:hover {
+  border-radius: 60% 0 0 60%;
+  transition: all 0.5s ease-in-out;
+}
+
 .hidden {
   display: none;
 }
